<?xml version="1.0"?>
<package format="2">
  <name>turtle_control</name>
  <version>0.0.1</version>
  <description>lets the simulated turtle follow a series of waypoints</description>

  <maintainer email="yael.bshalom@gmail.com">yael Ben Shalom</maintainer>
  <author email="yael.bshalom@gmail.com">yael Ben Shalom</author>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>GPLv3</license>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>turtlesim</depend> 
  <exec_depend>rospy</exec_depend>
  <build_depend>message_generation</build_depend>
  <depend>geometry_msgs</depend>
  <depend>message_runtime</depend>

</package>
